--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -1227,8 +1227,7 @@ header.header-nav a.navbar_brand {
   display: -ms-flex;
   display: -o-flex;
   display: flex;
-  margin-right: 37px;
-  margin-top: 20px;
+
   position: relative;
 }
 
@@ -1294,7 +1293,7 @@ header.header-nav.menu_style_home_one.stricky-fixed
   .ace-responsive-menu
   li.add_listing {
   background-color: var(--color-primary);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  box-shadow: 0px 1px 4px 0px #ccbc8196;
 }
 
 header.header-nav.menu_style_home_one.stricky-fixed
@@ -1343,7 +1342,6 @@ header.header-nav.menu_style_home_eight.navbar-scrolltofixed.stricky.animated {
 }
 
 header.header-nav.menu_style_home_one a.navbar_brand {
-  margin-top: 25px;
 }
 
 header.header-nav.menu_style_home_one.stricky-fixed a.navbar_brand .logo1,
@@ -2327,20 +2325,20 @@ header.header-nav.menu_style_home_one.style2
   ul.ace-responsive-menu
   li.add_listing {
   background-color: var(--color-primary);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
 }
 
 header.header-nav.menu_style_home_one.style2
   ul.ace-responsive-menu
   li.add_listing.home2 {
   background-color: rgb(36, 50, 74);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
 }
 
 header.header-nav.menu_style_home_one.style3
@@ -3816,10 +3814,10 @@ header.header-nav.menu_style_home_seven .ace-responsive-menu > li.last {
 .home1-advnc-search ul li .search_option_button button {
   border-radius: 8px;
   background-color: var(--color-primary);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px #ccbc81a3;
+  -moz-box-shadow: 0px 1px 4px 0px #ccbc81a3;
+  -o-box-shadow: 0px 1px 4px 0px #ccbc81a3;
+  box-shadow: 0px 1px 4px 0px #ccbc81a3;
   font-size: 16px;
   color: #ffffff;
   font-weight: bold;
@@ -5050,7 +5048,7 @@ form.home5_advanced_search_form
 }
 
 .home3_home_content .popup_video_btn {
-  background: rgb(255, 90, 95);
+  background: var(--color-primary);
   border-radius: 50%;
   color: #ffffff;
   font-size: 30px;
@@ -6486,7 +6484,7 @@ form.home5_advanced_search_form
 
 .status_tag.badge {
   border-radius: 3px;
-  background-color: rgb(255, 90, 95);
+  background-color: var(--color-primary);
   font-size: 14px;
   font-family: "Nunito";
   color: rgb(254, 254, 254);
@@ -7246,10 +7244,10 @@ form.home5_advanced_search_form
 .modern_apertment .booking_btn {
   border-radius: 8px;
   background-color: var(--color-primary);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   font-size: 16px;
   font-family: "Nunito";
   color: #ffffff;
@@ -7572,7 +7570,7 @@ form.home5_advanced_search_form
 }
 
 .property_video .thumb .overlay_icon .video_popup_btn {
-  background-color: rgb(255, 90, 95);
+  background-color: var(--color-primary);
   border-radius: 50%;
   color: #ffffff;
   font-size: 22px;
@@ -8064,7 +8062,7 @@ form.home5_advanced_search_form
 }
 
 .why_chose_us .icon {
-  background-color: #ffe8e9;
+  background-color: #fffae8;
   border-radius: 50%;
   height: 130px;
   line-height: 130px;
@@ -8555,11 +8553,11 @@ form.home5_advanced_search_form
 
 .parner_reg_btn a.btn {
   border-radius: 8px;
-  background-color: rgb(255, 120, 124);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  background-color: var(--color-secondary);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   height: 60px;
   line-height: 50px;
   width: 200px;
@@ -8914,15 +8912,15 @@ form.home5_advanced_search_form
 
 .my_profile_setting_input .btn1 {
   background-color: rgba(255, 90, 95, 0);
-  border: 2px solid rgb(255, 90, 95);
+  border: 2px solid var(--color-primary);
   border-radius: 8px;
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   font-size: 16px;
   font-family: "Nunito";
-  color: rgb(255, 90, 95);
+  color: var(--color-primary);
   font-weight: bold;
   line-height: 1.2;
   height: 50px;
@@ -8931,18 +8929,18 @@ form.home5_advanced_search_form
 }
 
 .my_profile_setting_input .btn1:hover {
-  background-color: rgb(255, 90, 95);
+  background-color: var(--color-primary);
   color: #ffffff;
 }
 
 .my_profile_setting_input .btn2 {
-  background-color: rgb(255, 90, 95);
-  border: 2px solid rgb(255, 90, 95);
+  background-color: var(--color-primary);
+  border: 2px solid var(--color-primary);
   border-radius: 8px;
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   font-size: 16px;
   font-family: "Nunito";
   color: rgb(255, 255, 255);
@@ -8953,19 +8951,19 @@ form.home5_advanced_search_form
 }
 
 .my_profile_setting_input .btn2:hover {
-  color: rgb(255, 90, 95);
+  color: var(--color-primary);
   background-color: #ffffff;
-  border: 2px solid rgb(255, 90, 95);
+  border: 2px solid var(--color-primary);
 }
 
 .my_profile_setting_input .btn3 {
   background-color: rgb(29, 41, 62);
   border: 2px solid rgb(29, 41, 62);
   border-radius: 8px;
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   font-size: 16px;
   font-family: "Nunito";
   color: rgb(255, 255, 255);
@@ -10480,7 +10478,7 @@ ul.ab_counting li:last-child {
 }
 
 .team_member .thumb .overylay {
-  background-color: rgba(255, 90, 95, 0.8);
+  background-color: rgb(194 185 101 / 80%);
   bottom: 0;
   left: 0;
   opacity: 0;
@@ -10501,22 +10499,22 @@ ul.ab_counting li:last-child {
   background-image: -moz-linear-gradient(
     -36deg,
     rgb(62, 62, 165) 0%,
-    rgb(255, 90, 95) 100%
+    var(--color-primary) 100%
   );
   background-image: -webkit-linear-gradient(
     -36deg,
     rgb(62, 62, 165) 0%,
-    rgb(255, 90, 95) 100%
+    var(--color-primary) 100%
   );
   background-image: -ms-linear-gradient(
     -36deg,
     rgb(62, 62, 165) 0%,
-    rgb(255, 90, 95) 100%
+    var(--color-primary) 100%
   );
   background-image: linear-gradient(
     -36deg,
     rgb(62, 62, 165) 0%,
-    rgb(255, 90, 95) 100%
+    var(--color-primary) 100%
   );
   opacity: 0.902;
 }
@@ -11696,10 +11694,10 @@ a.btn.btn_error {
   height: 50px;
   line-height: 35px;
   width: 200px;
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
 }
 
 /*== Service Pages Style Code ==*/
@@ -11793,10 +11791,10 @@ a.btn.btn_error {
   font-family: "Nunito";
   font-weight: bold;
   line-height: 30px;
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   height: 46px;
 }
 
@@ -12009,10 +12007,10 @@ a.btn.btn_error {
 .login_form .btn-log {
   border-radius: 8px;
   background-color: var(--color-primary);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   color: #ffffff;
   font-family: "Nunito";
   font-size: 16px;
@@ -12069,10 +12067,10 @@ a.btn.btn_error {
 .sign_up_form .btn-log {
   border-radius: 8px;
   background-color: var(--color-primary);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   color: #ffffff;
   font-size: 16px;
   font-family: "Nunito";
@@ -13382,14 +13380,14 @@ legend span {
 
 .sidebar_recent_product .media .media-body .post_title a:hover,
 .sidebar_feature_listing .media .media-body .post_title a:hover {
-  color: rgb(255, 90, 95);
+  color: var(--color-primary);
 }
 
 .sidebar_recent_product .media .media-body a,
 .sidebar_feature_listing .media .media-body a {
   font-size: 16px;
   font-family: "Nunito";
-  color: rgb(255, 90, 95);
+  color: var(--color-primary);
   font-weight: bold;
   line-height: 1.2;
 }
@@ -14015,12 +14013,12 @@ legend span {
 .mbp_pagination_comments a.write_review {
   font-size: 14px;
   font-family: "Nunito";
-  color: rgb(255, 90, 95);
+  color: var(--color-primary);
 }
 .mbp_pagination_comments a.write_review.left {
   font-size: 14px;
   font-family: "Nunito";
-  color: rgb(255, 90, 95);
+  color: var(--color-primary);
 }
 .mbp_pagination_comments .tr_outoff {
   font-size: 14px;
@@ -14287,11 +14285,11 @@ legend span {
 
 .pck_chng_btn .btn {
   border-radius: 8px;
-  background-color: rgb(255, 90, 95);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  background-color: var(--color-primary);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   font-size: 16px;
   font-family: "Nunito";
   color: #ffffff;
@@ -16250,7 +16248,7 @@ legend span {
 
 .portfolio_item .edu_stats_list {
   border-radius: 8px;
-  background-color: rgb(255, 90, 95);
+  background-color: var(--color-primary);
   cursor: pointer;
   height: 35px;
   line-height: 35px;
@@ -16607,10 +16605,10 @@ legend span {
 .form_grid .contact_form button {
   border-radius: 8px;
   background-color: var(--color-primary);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   font-size: 16px;
   font-family: "Nunito";
   color: #ffffff;
@@ -17242,7 +17240,7 @@ legend span {
 
 .btn-thm2 {
   background-color: #ff787c;
-  border-color: #ff787c;
+  border-color: #ccbc81a6;
   color: #ffffff;
   border-radius: 0px;
   -webkit-transition: all 0.3s ease;
@@ -19697,7 +19695,7 @@ canvas {
   top: 38px;
   width: 170px;
   z-index: 2;
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
 }
 
 #main2 .filter_open_btn {
@@ -19873,10 +19871,10 @@ canvas {
 
 .shop_grid .details .add_to_cart {
   border-radius: 8px;
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   font-size: 16px;
   font-family: "Nunito";
   font-weight: bold;
@@ -20075,10 +20073,10 @@ canvas {
   background-color: var(--color-primary);
   border-radius: 8px;
   color: #ffffff;
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   font-size: 16px;
   font-family: "Nunito";
   font-weight: bold;
@@ -20517,10 +20515,10 @@ canvas {
 
 .shop_single_product_details .cart_btns button.btn {
   background-color: var(--color-primary);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   border-radius: 8px;
   font-size: 16px;
   font-family: "Nunito";
@@ -20860,10 +20858,10 @@ ul.total_reivew_view .star_list li:last-child a {
 .bsp_reveiw_wrt .comments_form button.btn {
   border-radius: 8px;
   background-color: var(--color-primary);
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -moz-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  -o-box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
-  box-shadow: 0px 1px 4px 0px rgba(255, 90, 95, 0.3);
+  -webkit-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -moz-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
   color: #ffffff;
   font-size: 16px;
   font-family: "Nunito";
@@ -21145,7 +21143,7 @@ button.gm-ui-hover-effect:focus {
 }
 
 .gallery_item .gallery_overlay {
-  background-color: rgba(255, 90, 95, 0.8);
+  background-color: rgb(194 185 101 / 80%);
   border-radius: 5px;
   bottom: 0;
   left: 0;
