--- a/src/index.scss
+++ b/src/index.scss
@@ -376,3 +376,31 @@ header.header-nav.menu_style_home_eight
   left: 0;
   right: auto;
 }
+
+.ar .feat_property .thumb .thmb_cntnt a.fp_price {
+  left: auto;
+  right: 20px
+}
+
+.list-button {
+  background-color: var(--color-primary);
+  -o-box-shadow: 0px 1px 4px 0px var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
+  border:none;
+  padding:5px 15px;
+  border-radius: 15px;
+}
+
+
+.page-item.active .page-link{
+  background-color: var(--color-primary);
+  border: 1px solid var(--color-primary);
+  box-shadow: 0px 1px 4px 0px var(--color-primary);
+  color: #fff
+}
+
+.page-item .page-link {
+  color: #000;
+}
+
+
