--- a/public/assets/scss/components/_custom_theme.scss
+++ b/public/assets/scss/components/_custom_theme.scss
@@ -776,7 +776,7 @@ header.header-nav.menu_style_home_one
 
   .bs_carousel .main_title {
     color: #ffffff;
-    font-family: "Nunito";
+    font-family: "Cairo";
     font-size: 55px;
     font-weight: bold;
     line-height: 1.2;
@@ -786,7 +786,7 @@ header.header-nav.menu_style_home_one
 
   .bs_carousel .parag {
     font-size: 18px;
-    font-family: "Nunito";
+    font-family: "Cairo";
     color: #ffffff;
     line-height: 1.2;
     margin-bottom: 0;
@@ -953,7 +953,7 @@ textarea.form-control {
     border: 1px solid rgb(235, 235, 235);
     border-radius: 8px;
     font-size: 14px;
-    font-family: "Nunito";
+    font-family: "Cairo";
     color: #484848;
     line-height: 1.2;
     height: 52px;
